--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <div class="container">
       <div class="card-white" id="introduction">
-        <h1>Bonjour, je suis Balthazar Queme 😎</h1>
+        <h1>Bonjour, je suis Balthazar Queme </h1>
         <img src="image/photoemlv.jpg" alt="Ma Photo de Profil"> <!-- Le chemin relatif vers votre photo -->
         <p>
-          Salut ! Je suis actuellement étudiant à l'EMLV (École de Management Léonard de Vinci) en première année du "French Track". Passionné par le monde de la cryptomonnaie et le développement frontend, je suis également un adepte de la boxe anglaise et de l'horlogerie.
+          Salut ! Je suis actuellement étudiant à l'EMLV (École de Management Léonard de Vinci) en première année du "French Track". Passionné par le monde de la cryptomonnaie, je suis également un adepte de la boxe anglaise et de l'horlogerie.
         </p>
         <a href="#" class="btn-blue">Découvrir l'EMLV</a>
       </div>
