--- a/index.html
+++ b/index.html
@@ -3,40 +3,41 @@
   <head>
     <title>Mon Profil</title>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Roboto:300,400,500,700,900" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <div class="container">
       <div class="card-white" id="introduction">
-        <h1>Bonjour, je suis Balthazar Queme </h1>
-        <img src="image/photoemlv.jpg" alt="Ma Photo de Profil"> <!-- Le chemin relatif vers votre photo -->
+        <h1>Bonjour, je suis Balthazar Queme 😎</h1>
+        <img src="images/photoemlv.jpg" alt="Ma Photo de Profil">
         <p>
-          Salut ! Je suis actuellement étudiant à l'EMLV (École de Management Léonard de Vinci) en première année du "French Track". Passionné par le monde de la cryptomonnaie, je suis également un adepte de la boxe anglaise et de l'horlogerie.
+          Salut ! Je suis actuellement étudiant à l'EMLV (École de Management Léonard de Vinci) en première année du "French Track". Passionné par le monde de la cryptomonnaie et le développement frontend, je suis également un adepte de la boxe anglaise et de l'horlogerie.
         </p>
-        <a href="#" class="btn-blue">Découvrir l'EMLV</a>
+        <div class="center-button">
+          <a href="https://www.emlv.fr" class="btn-blue">Découvrir l'EMLV</a>
+        </div>
       </div>
-      <div class="card-white">
+      <div class="card-white" id="cryptomonnaies">
         <h2>💰 Cryptomonnaies</h2>
         <p>
           Plongez avec moi dans l'univers passionnant des cryptomonnaies. Je suis constamment à la recherche des dernières tendances et opportunités dans ce domaine en constante évolution.
         </p>
       </div>
-      <div class="card-white">
+      <div class="card-white" id="boxe">
         <h2>🥊 Boxe Anglaise</h2>
         <p>
           En dehors de ma vie d'étudiant, je m'épanouis dans la boxe anglaise. C'est un sport qui demande de la discipline, de la force mentale et de la détermination, des qualités que je m'efforce de développer chaque jour.
         </p>
       </div>
-      <div class="card-white">
+      <div class="card-white" id="horlogerie">
         <h2>⌚ Horlogerie</h2>
         <p>
           L'horlogerie est une véritable passion pour moi. J'admire l'art et la précision qui se cachent derrière la fabrication des montres de haute qualité. C'est un monde fascinant que je prends plaisir à explorer.
         </p>
       </div>
-      <div class="card-white">
+      <div class="card-white" id="follow-me">
         <h2>Follow me</h2>
         <ul class="list-inline">
           <li>
